Fix responsive video size on mobile (#195)

--- a/internal/static/css/99-twtxt.css
+++ b/internal/static/css/99-twtxt.css
@@ -36,8 +36,9 @@ article hgroup footer {
 /* 480p */
 video {
   display: block;
-  width: auto;
-  height: 480px;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
   background: #000;
   box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2);
 }
